--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
   <title></title>
 </head>
 
-<body>
+<body class="%PROJECT_NAME%">
   <link rel="stylesheet/less" type="text/css" href="%PUBLIC_URL%/index.less">
   <!-- <link rel="stylesheet/less" type="text/css" href="%PUBLIC_URL%/color-antd3.less"> -->
   <script>
