--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,6 @@
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -28,12 +27,11 @@
   <link rel="stylesheet/less" type="text/css" href="%PUBLIC_URL%/index.less">
   <!-- <link rel="stylesheet/less" type="text/css" href="%PUBLIC_URL%/color-antd3.less"> -->
   <script>
-    var color = localStorage.getItem('themeColor') || 'rgba(0, 73, 176, 255)';
     less = {
       env: "production",
       javascriptEnabled: true,
       modifyVars: {
-        "@primary-color": color,
+        "@primary-color": 'rgba(0, 73, 176, 255)',
         "@ant-prefix": "ant4"
       }
     };
