--- a/public/index.html
+++ b/public/index.html
@@ -24,9 +24,9 @@
 </head>
 
 <body class="%PROJECT_NAME%">
-  <link rel="stylesheet/less" type="text/css" href="%PUBLIC_URL%/index.less">
+  <!-- <link rel="stylesheet/less" type="text/css" href="%PUBLIC_URL%/index.less"> -->
   <!-- <link rel="stylesheet/less" type="text/css" href="%PUBLIC_URL%/color-antd3.less"> -->
-  <script>
+  <!-- <script>
     if (!window.less)
       window.less = {
         env: "production",
@@ -36,7 +36,7 @@
           "@ant-prefix": "ant4"
         }
       };
-  </script>
+  </script> -->
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root" class="vstretch"></div>
   <!--
